Commit everything